Cambio final mañana 24

--- a/trabajo_final_data_science.ipynb
+++ b/trabajo_final_data_science.ipynb
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"4\">**3.** Exploramos 'sellin_total'</font>"
+    "<font size=\"4\">**4.** Exploramos 'sellin_total'</font>"
    ]
   },
   {
@@ -593,6 +593,369 @@
    "source": [
     "condicion = sellin_total.Pieces == 0\n",
     "print(sellin_total[condicion])\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=\"4\">**5.** Exploramos 'proveedor1 y proveedor2'</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1206365 entries, 0 to 1206364\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count    Dtype  \n",
+      "---  ------    --------------    -----  \n",
+      " 0   Sku       1206365 non-null  int64  \n",
+      " 1   Date      1206365 non-null  object \n",
+      " 2   Store_Id  1206365 non-null  int64  \n",
+      " 3   Units     1206365 non-null  float64\n",
+      " 4   Price     1206365 non-null  float64\n",
+      "dtypes: float64(2), int64(2), object(1)\n",
+      "memory usage: 46.0+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sku</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Store_Id</th>\n",
+       "      <th>Units</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>2017-01-01 SO Diaria Piezas</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>15.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>2017-01-01 SO Diaria Piezas</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>2017-01-01 SO Diaria Piezas</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>2017-01-01 SO Diaria Piezas</td>\n",
+       "      <td>44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4220015</td>\n",
+       "      <td>2017-01-01 SO Diaria Piezas</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sku                         Date  Store_Id  Units  Price\n",
+       "0  4220015  2017-01-01 SO Diaria Piezas        18    6.0   15.6\n",
+       "1  4220015  2017-01-01 SO Diaria Piezas        24    0.0    0.0\n",
+       "2  4220015  2017-01-01 SO Diaria Piezas        39    0.0    0.0\n",
+       "3  4220015  2017-01-01 SO Diaria Piezas        44    0.0    0.0\n",
+       "4  4220015  2017-01-01 SO Diaria Piezas        46    0.0    0.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info = proveedor1.info()\n",
+    "head = proveedor1.head()\n",
+    "head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1019837   -190.050000\n",
+       "643556    -106.000000\n",
+       "1166200    -71.560000\n",
+       "1127829    -29.880000\n",
+       "629173     -25.200000\n",
+       "              ...    \n",
+       "996751     584.250000\n",
+       "460058     644.422222\n",
+       "1029464    649.866667\n",
+       "1033149    835.177778\n",
+       "1036804    871.933333\n",
+       "Name: Price, Length: 1206365, dtype: float64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_date = proveedor1.Date.sort_values()\n",
+    "store1 = proveedor1.Store_Id.sort_values()\n",
+    "units1 = proveedor1.Units.sort_values()\n",
+    "price1 = proveedor1.Price.sort_values()\n",
+    "\n",
+    "price1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Comprobemos cuantas unidades negativas hay en proveedor1\n",
+    "condicion1 = proveedor1.Units < 0\n",
+    "print(proveedor1[condicion1])\n",
+    "#Comprobemos cuantos precios estan en negativo en proveedor2\n",
+    "condicion2 = proveedor1.Price < 0\n",
+    "print(proveedor1[condicion2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4862029 entries, 0 to 4862028\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Dtype  \n",
+      "---  ------    -----  \n",
+      " 0   Sku       int64  \n",
+      " 1   Date      object \n",
+      " 2   Store_Id  int64  \n",
+      " 3   Pieces    float64\n",
+      " 4   Price     object \n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 185.5+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sku</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Store_Id</th>\n",
+       "      <th>Pieces</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4240039</td>\n",
+       "      <td>2016/01/01</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>$16.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4240039</td>\n",
+       "      <td>2016/01/01</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>$16.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4240039</td>\n",
+       "      <td>2016/01/01</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>$16.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4240039</td>\n",
+       "      <td>2016/01/01</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>$16.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4240039</td>\n",
+       "      <td>2016/01/01</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>$16.70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sku        Date  Store_Id  Pieces   Price\n",
+       "0  4240039  2016/01/01      1000    23.0  $16.00\n",
+       "1  4240039  2016/01/01      1001   116.0  $16.00\n",
+       "2  4240039  2016/01/01      1002   146.0  $16.00\n",
+       "3  4240039  2016/01/01      1003    17.0  $16.80\n",
+       "4  4240039  2016/01/01      1004     5.0  $16.70"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info2 = proveedor2.info()\n",
+    "head2 = proveedor2.head()\n",
+    "head2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3290274      58\n",
+       "1751549      58\n",
+       "1528959      58\n",
+       "4320516      58\n",
+       "4530992      58\n",
+       "           ... \n",
+       "2398887    5855\n",
+       "4701668    5855\n",
+       "2017359    5855\n",
+       "3969871    5855\n",
+       "2424106    5855\n",
+       "Name: Store_Id, Length: 4862029, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = proveedor2.Date.sort_values()\n",
+    "store = proveedor2.Store_Id.sort_values()\n",
+    "store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Sku        Date  Store_Id  Pieces  Price\n",
+      "813      4240039  2016/01/01      3113    -6.0  16.00\n",
+      "4755     4240039  2016/10/31      2092    -9.0  16.40\n",
+      "5966     4240039  2016/11/01      1641   -28.0  15.90\n",
+      "19010    4240039  2016/11/10      3089    -8.0  16.80\n",
+      "40607    4240039  2016/11/26      1623    -1.0  15.50\n",
+      "...          ...         ...       ...     ...    ...\n",
+      "4847538  4729193  2016/12/01      1038   -47.0  17.90\n",
+      "4848975  4729193  2016/12/03      3902    -4.0  17.90\n",
+      "4850934  4729193  2016/12/07      2766    -2.0  18.55\n",
+      "4851358  4729193  2016/12/08      2540    -2.0  18.00\n",
+      "4861928  4729193  2016/12/30      3875    -4.0  17.90\n",
+      "\n",
+      "[293 rows x 5 columns]\n",
+      "             Sku        Date  Store_Id  Pieces  Price\n",
+      "779481   4270121  2016/02/07      1486     1.8 -10.37\n",
+      "1158518  4290336  2016/04/18      3053     0.9 -23.50\n",
+      "4208500  4635546  2016/10/31      1408     1.0  -0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Comprobemos cuantas unidades negativas hay en proveedor2\n",
+    "condicion3 = proveedor2.Pieces <= 0\n",
+    "print(proveedor2[condicion3])\n",
+    "#Comprobemos cuantos precios estan en negativo en proveedor2\n",
+    "\n",
+    "condicion4 = proveedor2.Price <= 0\n",
+    "print(proveedor2[condicion4])"
    ]
   },
   {
